Changes to Get shop Details
