# src/controllers/orders/orders.controller.js
@@ -1,16 +1,12 @@
 const orderHelper = require("../../helper/order.helper");
 const { StatusCodes } = require("http-status-codes");
 const logger = require("../../../lib/logger");
-const Order = require("../../models/order/order.model");
-const { User } = require("../../models");
-const OrderHelper = require("../../helper/order.helper");
-const { ObjectId } = require("mongoose").Types;
 
 exports.PlaceOrder = async (req, res) => {
   try {
     const result = await orderHelper.placeOrder(req.body);
     return res.status(StatusCodes.OK).json({
-      message: "Order place successfully",
+      message: "Order placed successfully",
       data: result,
     });
   } catch (error) {
@@ -24,11 +20,14 @@ exports.PlaceOrder = async (req, res) => {
 
 exports.getShopOrders = async (req, res) => {
   try {
-    const shopId = req.query.shopId;
-    const order = await orderHelper.getOrdersByShopId(shopId);
+    const shopId = req.params.shopId;
+    const skip = req.query.skip;
+    const limit = req.query.limit;
+
+    const order = await orderHelper.getOrdersByShopId(shopId, skip, limit);
     return res
       .status(StatusCodes.OK)
-      .json({ message: "Orders fetched Succesfullt", orders: order });
+      .json({ message: "Orders fetched Succesfully", orders: order });
   } catch (error) {
     logger.error(`Error in fetching orders:: ${error.message}`);
     return res.status(StatusCodes.INTERNAL_SERVER_ERROR).json({
@@ -40,11 +39,16 @@ exports.getShopOrders = async (req, res) => {
 
 exports.getUserOrders = async (req, res) => {
   try {
-    const userId = req.query.userId;
-    const order = await orderHelper.getOrdersByUserId(userId);
+    const userId = req.params.userId;
+    const skip = req.query.skip;
+    const limit = req.query.limit;
+
+    const order = await orderHelper.getOrdersByUserId(userId, skip, limit);
+
+    // console.log(order[0].orderStatus);
     return res
       .status(StatusCodes.OK)
-      .json({ message: "Orders fetched Succesfullt", orders: order });
+      .json({ message: "Orders fetched Succesfully", orders: order });
   } catch (error) {
     logger.error(`Error in fetching orders:: ${error.message}`);
     return res.status(StatusCodes.INTERNAL_SERVER_ERROR).json({
