# src/routes/orders/orders.route.js
@@ -1,8 +1,9 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
-const orderController = require('../../controllers/orders/orders.controller');
+const orderController = require("../../controllers/orders/orders.controller");
 
-router.post('/', orderController.PlaceOrder);
-router.get('/orders/shops',orderController.getShopOrders)
-router.get('/orders/users',orderController.getUserOrders)
+router.post("/", orderController.PlaceOrder);
+ router.get("/:userId", orderController.getUserOrders);
+router.get("/shop/:shopId", orderController.getShopOrders);
+
 module.exports = router;
